Add JVM runtime settings to KSQL Server config topic